W07-added another collection and OAuth, and fixing bugs in swagger
