# controllers/fruits.js
@@ -1,0 +1,109 @@
+const mongodb = require('../db/connection');
+const ObjectId = require('mongodb').ObjectId;
+
+const getAll = async (req, res) => {
+  try {
+    const result = await mongodb.getDb().db().collection('akumanomi').find();
+    result.toArray().then((lists) => {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists);
+    });
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+const getSingle = async (req, res) => {
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a valid fruit id to find a akuma no mi.');
+    }
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db().collection('akumanomi').find({ _id: userId });
+    result.toArray().then((err, lists) => {
+      if (err) {
+        res.status(400).json({ message: err });
+      }
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists[0]);
+    });
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+const createContact = async (req, res) => {
+  try {
+    const fruit = {
+      fruitName: req.body.fruitName,
+      description: req.body.description,
+      type: req.body.type
+    };
+    const response = await mongodb.getDb().db().collection('akumanomi').insertOne(fruit);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while creating the character.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+const updateContact = async (req, res) => {
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a valid contact id to update a contact.');
+    }
+    const userId = new ObjectId(req.params.id);
+    // be aware of updateOne if you only want to update specific fields
+    const fruit = {
+      fruitName: req.body.fruitName,
+      description: req.body.description,
+      type: req.body.type
+    };
+    const response = await mongodb
+      .getDb()
+      .db()
+      .collection('akumanomi')
+      .replaceOne({ _id: userId }, fruit);
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+const deleteContact = async (req, res) => {
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a valid fruit id to update a fruit.');
+    }
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb
+      .getDb()
+      .db()
+      .collection('akumanomi')
+      .deleteOne({ _id: userId }, true);
+    console.log(response);
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while deleting the fruit.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+module.exports = {
+  getAll,
+  getSingle,
+  createContact,
+  updateContact,
+  deleteContact
+};
